fixed overflow issue in splash page

--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -109,6 +109,7 @@ video#video-header {
     position: relative;
     bottom: 5.5rem;
     left: 55rem;
+    width: fit-content;
   }
 
   .welcome-msg-splash:hover {
